# peng-blog

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
config/: config.toml  config.toml.example
crates/api/: Cargo.toml
crates/api/src/: auth.rs  bing.rs  category.rs  config.rs  error.rs  file_cache.rs  lib.rs  post.rs  response.rs  rss.rs  state.rs  tag.rs  user.rs
crates/api/src/comment/: mod.rs
crates/api/src/file/: mod.rs
crates/api/src/middleware/: auth.rs  mod.rs
crates/api/src/session/: mod.rs
crates/api/src/stats/: mod.rs
crates/app/: Cargo.toml  build.rs
crates/app/src/: lib.rs  main.rs
crates/blog-service/: Cargo.toml
crates/blog-service/src/: lib.rs  post.rs  user.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  update.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  loader.rs  types.rs
crates/domain/: Cargo.toml
crates/domain/src/: AGENTS.md  category.rs  comment.rs  config.rs  error.rs  file.rs  indexnow.rs  lib.rs  post.rs  repository.rs  session.rs  stats.rs  tag.rs  user.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: category.rs  config.rs  indexnow.rs  lib.rs  post.rs  repository.rs  tag.rs  user.rs
crates/infrastructure/src/comment/: mod.rs
crates/infrastructure/src/entity/: category.rs  comment.rs  file.rs  mod.rs  post.rs  post_tag.rs  prelude.rs  session.rs  stats.rs  tag.rs  user.rs
crates/infrastructure/src/entity/post_stats/: mod.rs
crates/infrastructure/src/file/: mod.rs
crates/infrastructure/src/migrations/: m20250101_000000_create_user.rs  m20250101_000001_create_post.rs  m20250101_000002_create_session.rs  m20250101_000004_create_file.rs  m20250101_000006_create_comment.rs  m20250101_000008_create_visit_stats.rs  m20250101_000010_create_post_stats.rs  m20250101_000011_add_views_to_post.rs  m20250101_000012_create_category.rs  m20250101_000013_create_tag.rs  m20250101_000014_create_post_tag.rs  m20250101_000015_add_category_to_post.rs  m20250101_000016_add_indexnow_to_post.rs  mod.rs
crates/infrastructure/src/session/: mod.rs
crates/infrastructure/src/stats/: mod.rs
crates/service/: Cargo.toml
crates/service/src/: category.rs  config.rs  lib.rs  post.rs  repository.rs  rss.rs  tag.rs  user.rs
crates/service/src/comment/: mod.rs
crates/service/src/file/: mod.rs
crates/service/src/session/: mod.rs
crates/service/src/stats/: mod.rs
docs/: AGENT.md  ARCHITECTURE.md  CHANGELOG.md  CI_CHECKS.md  CLI_MODIFICATION_SUMMARY.md  CLI_USAGE.md  DEVELOPMENT.md  FRONTEND_DEPLOYMENT.md  GITHUB_OAUTH.md  INDEX.md  QUICK_START.md  README.md  RSS_FEED.md
docs/api/: API_IMPROVEMENTS.md  AUTH.md  CATEGORIES.md  CHANGES_v2.md  INDEX.md  POSTS.md  README.md  TAGS.md  USERS.md
docs/ci/: GITHUB_ACTIONS_FIXES.md
frontend/: .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  PROGRESS.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: AGENTS.md  auth.ts  bing.ts  categories.ts  comments.ts  config.ts  files.ts  index.ts  posts.ts  sessions.ts  stats.ts  tags.ts  users.ts
frontend/src/components/: LoginForm.tsx  PostList.tsx
frontend/src/components/effects/: LiquidGlassBackground.tsx  LiquidGlassBackground.tsx.bak
frontend/src/components/features/: PostCard.tsx  PostList.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  MainLayout.tsx  PageTransition.tsx
frontend/src/components/layouts/: MainLayout.tsx
frontend/src/components/ui/: BackToTop.tsx  CodeBlock.tsx  ImageUploadDialog.tsx  LoginForm.tsx  Mermaid.tsx  Toast.tsx
frontend/src/contexts/: ConfigContext.tsx  ThemeContext.tsx  configCore.ts  index.ts
frontend/src/pages/: Admin.tsx  AdminPage.tsx  CategoriesPage.tsx  GitHubAuthCallback.tsx  Home.tsx  HomePage.tsx  NotFoundPage.tsx  PostDetail.tsx  PostDetailPage.tsx  PostEditor.tsx  PostEditorPage.tsx  PostsPage.tsx  Register.tsx  RegisterPage.tsx  SearchPage.tsx  TagsPage.tsx
frontend/src/styles/: useCommonStyles.ts
frontend/src/theme/: index.ts
frontend/src/types/: index.ts
frontend/src/utils/: color.ts  markdown.ts  request.ts
migrations/: m20240127_000001_create_post_table.sql
scripts/: build.sh  install-hooks.sh  pre-commit-ci.sh
sql/: init.sql
static/: index.html
