[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/api",
    "crates/infrastructure",
    "crates/domain",
    "crates/service",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Linus Torvalds <torvalds@linux-foundation.org>"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Database
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio", "macros", "with-chrono", "with-uuid"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.10", features = ["v4", "v5", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# HTTP client (for frontend)
reqwest = { version = "0.12", features = ["json"] }

# URL encoding
urlencoding = "2.1"

# Async utilities
tokio-util = { version = "0.7", features = ["io"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Password hashing
argon2 = { version = "0.5", features = ["std"] }

# Authentication
jsonwebtoken = "9.0"



# ============================================================================
# Build Profiles
# ============================================================================

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true

# ============================================================================
# Test Configuration
# ============================================================================

# Default test configuration
[workspace.metadata.test]
# Test timeout in seconds (disabled by default)
timeout = 0

# Number of threads to use for tests
threads = 0

# ============================================================================
# Benchmarking Configuration
# ============================================================================

[workspace.metadata.bench]
# Benchmark harness
harness = false