[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Authentication
jsonwebtoken = "9.0"
axum-extra = { version = "0.9", features = ["typed-header"] }