[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }
service = { path = "../service" }
infrastructure = { path = "../infrastructure" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }

# Authentication
jsonwebtoken = "9.0"
axum-extra = { version = "0.10", features = ["typed-header", "multipart"] }

# HTTP client
reqwest = { workspace = true }
