[package]
name = "app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "peng-blog"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
infrastructure = { path = "../infrastructure" }
domain = { path = "../domain" }
blog-service = { path = "../blog-service" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
