[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[package.metadata.default-run]
name = "peng-blog-cli"

[[bin]]
name = "peng-blog-cli"
path = "src/main.rs"

 [dependencies]
 # Domain and infrastructure
 domain = { path = "../domain" }
 service = { path = "../service" }
 infrastructure = { path = "../infrastructure" }
 app = { path = "../app" }
 config = { path = "../config" }

# Async runtime
tokio = { workspace = true }

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Interactive prompts
dialoguer = "0.11"
console = "0.15"

# Password hashing (already has std feature in workspace)
argon2 = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Database
sea-orm = { workspace = true }

# Environment variables
dotenvy = { workspace = true }

# UUID
uuid = { workspace = true }

# Date/time
chrono = { workspace = true }

 # Logging
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }

 # Update functionality
 reqwest = { workspace = true }
 flate2 = "1.0"
 tar = "0.4"
 tempfile = "3.13"
 walkdir = "2.5"
 serde = { workspace = true }