[package]
name = "config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

 [dependencies]
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 toml = "0.8"

 # Error handling
 thiserror = { workspace = true }

 # Logging
 tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
