[package]
name = "domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
async-trait = { workspace = true }