[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }
config = { path = "../config" }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
