[package]
name = "service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
domain = { path = "../domain" }
uuid = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
urlencoding = { workspace = true }
rss = "2.0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
mockall = "0.13"
